--- a/src/main/resources/testFX.fxml
+++ b/src/main/resources/testFX.fxml
@@ -1,24 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controllers">
+<Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url(https://wallpapercave.com/wp/wp2577090.jpg);" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controllers">
    <children>
-      <Button layoutX="439.0" layoutY="66.0" mnemonicParsing="false" onAction="#switchToScene2" text="Scene 2">
+      <Button layoutX="439.0" layoutY="66.0" mnemonicParsing="false" onAction="#switchToScene2" opacity="0.75" text="Scene 2">
          <font>
             <Font size="30.0" />
          </font>
       </Button>
-      <Text layoutX="435.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Scene 1">
+      <Text fill="WHITE" layoutX="435.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Scene 1">
          <font>
-            <Font size="44.0" />
+            <Font size="45.0" />
          </font>
       </Text>
-      <Button layoutX="520.0" layoutY="153.0" mnemonicParsing="false" onAction="#spawnCircle" prefHeight="25.0" prefWidth="68.0" text="Circle" textAlignment="CENTER" />
-      <Button layoutX="520.0" layoutY="188.0" mnemonicParsing="false" onAction="#spawnRectangle" text="Rectangle" />
-      <Button layoutX="520.0" layoutY="221.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="68.0" text="Test" />
+      <Button layoutX="520.0" layoutY="153.0" mnemonicParsing="false" onAction="#spawnCircle" opacity="0.75" prefHeight="25.0" prefWidth="68.0" text="Circle" textAlignment="CENTER" />
+      <Button layoutX="520.0" layoutY="188.0" mnemonicParsing="false" onAction="#spawnRectangle" opacity="0.75" text="Rectangle" />
+      <Button layoutX="520.0" layoutY="221.0" mnemonicParsing="false" onAction="#sammeln" opacity="0.75" prefHeight="25.0" prefWidth="68.0" text="Sammeln" />
+      <TextField id="xInput" layoutX="517.0" layoutY="272.0" onAction="#sammeln" prefHeight="25.0" prefWidth="68.0" fx:id="xInput" />
+      <TextField id="yInput" fx:id="yInput" layoutX="517.0" layoutY="305.0" onAction="#sammeln" prefHeight="25.0" prefWidth="68.0" />
+      <TextField id="speedInput" fx:id="speedInput" layoutX="517.0" layoutY="340.0" onAction="#sammeln" prefHeight="25.0" prefWidth="68.0" />
+      <Label layoutX="491.0" layoutY="270.0" text="X:" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label layoutX="491.0" layoutY="303.0" text="Y:" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label layoutX="452.0" layoutY="338.0" text="Speed:" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
    </children>
 </Pane>
