--- a/src/main/resources/Scene2.fxml
+++ b/src/main/resources/Scene2.fxml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafx.SceneController">
+<AnchorPane fx:id="LibraryPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="library.LibraryController">
    <children>
-      <Text layoutX="164.0" layoutY="119.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Scence 2" textAlignment="CENTER" wrappingWidth="271.35858154296875">
+      <Text layoutX="164.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Library" textAlignment="CENTER" wrappingWidth="271.35858154296875">
          <font>
             <Font size="42.0" />
          </font>
       </Text>
-      <Button layoutX="245.0" layoutY="216.0" mnemonicParsing="false" onAction="#switchToScene1" text="Switch to Scene 1" />
+      <TextField fx:id="bookTitle" layoutX="48.0" layoutY="130.0" promptText="Book title" />
+      <TextField fx:id="bookID" layoutX="48.0" layoutY="188.0" promptText="Book ID" />
+      <TextArea layoutX="386.0" layoutY="88.0" prefHeight="200.0" prefWidth="200.0" promptText="Availabe books" />
+      <Button fx:id="addBookButton" layoutX="67.0" layoutY="254.0" mnemonicParsing="false" onAction="#addBookAction" text="Add Book" />
    </children>
 </AnchorPane>
