--- a/src/main/resources/scene2fx.fxml
+++ b/src/main/resources/scene2fx.fxml
@@ -1,20 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url(https://wallpapercave.com/wp/wp2577090.jpg);" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controllers">
+<AnchorPane fx:id="pane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url(https://wallpapercave.com/wp/wp2577090.jpg);" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="library.LibraryController">
    <children>
-      <Button layoutX="437.0" layoutY="65.0" mnemonicParsing="false" onAction="#switchToScene1" opacity="0.75" text="Scene 1">
+      <Button layoutX="16.0" layoutY="74.0" mnemonicParsing="false" onAction="#switchToScene1" opacity="0.75" text="Scene 1">
          <font>
             <Font size="30.0" />
          </font>
       </Button>
-      <Text fill="WHITE" layoutX="432.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Scene 2">
+      <Text fill="WHITE" layoutX="16.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Scene 2">
          <font>
             <Font size="45.0" />
+         </font>
+      </Text>
+      <Text fill="WHITE" layoutX="16.0" layoutY="209.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add a book" wrappingWidth="208.634765625">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Text>
+      <TextField fx:id="bookTitle" layoutX="16.0" layoutY="228.0" prefHeight="31.0" prefWidth="231.0" promptText="Book title">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="bookAmount" layoutX="16.0" layoutY="266.0" prefHeight="31.0" prefWidth="231.0" promptText="Amount of books">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </TextField>
+      <Button fx:id="addBookButton" layoutX="16.0" layoutY="312.0" mnemonicParsing="false" onAction="#addBookAction" text="Add">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
+      <TextArea fx:id="showBooksArea" layoutX="293.0" layoutY="82.0" prefHeight="237.0" prefWidth="283.0" />
+      <Button fx:id="showBooksButton" layoutX="468.0" layoutY="329.0" mnemonicParsing="false" onAction="#showBooks" text="Show books">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
+      <Text fill="WHITE" layoutX="290.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Show available books" textAlignment="CENTER" wrappingWidth="289.634765625">
+         <font>
+            <Font size="30.0" />
          </font>
       </Text>
    </children>
