--- a/src/main/resources/scene2fx.fxml
+++ b/src/main/resources/scene2fx.fxml
@@ -39,7 +39,7 @@
             <Font size="16.0" />
          </font>
       </Button>
-      <TextArea fx:id="showBooksArea" layoutX="293.0" layoutY="82.0" prefHeight="237.0" prefWidth="283.0" />
+      <TextArea fx:id="showBooksArea" editable="false" layoutX="293.0" layoutY="82.0" prefHeight="237.0" prefWidth="283.0" />
       <Button fx:id="showBooksButton" layoutX="468.0" layoutY="329.0" mnemonicParsing="false" onAction="#showBooks" text="Show books">
          <font>
             <Font size="16.0" />
