--- a/src/main/resources/Scene2.fxml
+++ b/src/main/resources/Scene2.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -7,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="LibraryPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="library.LibraryController">
+<AnchorPane fx:id="LibraryPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url(https://wallpapercave.com/wp/wp2577090.jpg);" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="library.LibraryController">
    <children>
       <Text layoutX="164.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Library" textAlignment="CENTER" wrappingWidth="271.35858154296875">
          <font>
@@ -19,4 +20,7 @@
       <TextArea layoutX="386.0" layoutY="88.0" prefHeight="200.0" prefWidth="200.0" promptText="Availabe books" />
       <Button fx:id="addBookButton" layoutX="67.0" layoutY="254.0" mnemonicParsing="false" onAction="#addBookAction" text="Add Book" />
    </children>
+   <padding>
+      <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
+   </padding>
 </AnchorPane>
